[package]
name = "crdt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive", "cargo"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
